@@ -83,6 +83,8 @@ extern struct t_irc_channel *irc_channel_new (struct t_irc_server *server,
                                               const char *channel_name,
                                               int switch_to_channel,
                                               int auto_switch);
+extern void irc_channel_add_nicklist_groups (struct t_irc_server *server,
+                                             struct t_irc_channel *channel);
 extern void irc_channel_set_topic (struct t_irc_channel *channel,
                                    const char *topic);
 extern void irc_channel_set_modes (struct t_irc_channel *channel,
