@@ -22,6 +22,8 @@ http://weechat.org/files/releasenotes/ReleaseNotes-devel.html[release notes]
 * core: add options to customize default text search in buffers:
   weechat.look.buffer_search_{case_sensitive|force_default|regex|where}
 * api: fix read of arrays in hdata functions hdata_<type> (bug #40354)
+* irc: fix groups in channel nicklist when reconnecting to a server that
+  supports more nick prefixes than the previously connected server
 * irc: fix auto-switch to channel buffer when doing /join channel (without "#")
 * irc: add option irc.look.notice_welcome_tags
 * irc: add server option "default_msg_kick" to customize default kick/kickban
